# ini-parser

./: .gitignore  CMakeLists.txt  ChangeLog.md
examples/: CMakeLists.txt
examples/resources/: test.ini  test_bad_comment.ini  test_bad_comment2.ini  test_bad_comment3.ini  test_bad_line.ini  test_bad_line2.ini  test_bad_line3.ini  test_bad_line4.ini  test_bad_section.ini  test_null.ini  test_overwrite1.ini  test_overwrite2.ini
examples/src/: example1.cpp
lib/: CMakeLists.txt
lib/inc/: INIParser.h
lib/src/: INIParser.cpp
